Add app performance monitoring

--- a/variables.env.sample
+++ b/variables.env.sample
@@ -8,3 +8,6 @@ DATABASE=mongodb://user:password@host:port/db_name
 PORT=7777
 GA_TRACKING_ID=id
 MAILCHIMP_LIST_ID=id
+OPBEAT_APP_ID=id
+OPBEAT_ORGANIZATION_ID=id
+OPBEAT_SECRET_TOKEN=token
