--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "dotenv": "^4.0.0",
     "express": "^4.15.5",
     "mongoose": "^4.11.13",
+    "opbeat": "^4.16.0",
     "pug": "^2.0.0-rc.4",
     "store": "^2.0.12"
   },
