--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "concurrently \"npm run watch\" \"npm run assets\" --names \"💻,📦\" --prefix name",
     "watch": "nodemon ./start.js --ignore public/",
-    "assets": "webpack -w --display-max-modules 0",
+    "assets": "webpack -w --display-max-modules 0 --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.js",
     "start": "node ./start.js"
   },
   "repository": {
@@ -42,6 +43,8 @@
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.8.0",
     "nodemon": "^1.12.1",
-    "webpack": "^3.7.1"
+    "uglifyjs-webpack-plugin": "^1.0.1",
+    "webpack": "^3.7.1",
+    "webpack-merge": "^4.1.0"
   }
 }
